--- a/src/property/database.properties
+++ b/src/property/database.properties
@@ -6,5 +6,8 @@ db.url = jdbc:mysql://localhost:3306/bookstore
 db.autoReconnect = true
 db.characterEncoding = UTF-8
 db.useUnicode = true
-db.useSSL = false
+db.useSSL = true
+db.useJDBCCompliantTimezoneShift = true
+db.useLegacyDatetimeCode = false
 db.serverTimezone = UTC
+db.serverSslCert = classpath:server.crt
