--- a/src/property/database.properties
+++ b/src/property/database.properties
@@ -1,13 +1,14 @@
+url = jdbc:mysql://localhost:3306/bookstore
+user = root
+password = 7h3_d4t4b4sE
+useSSL = false
+serverTimezone = UTC
+autoReconnect = true
+characterEncoding = UTF-8
+useUnicode = true
 db.driver = com.mysql.cj.jdbc.Driver
-db.user = root
-db.password = 7h3_d4t4b4sE
-db.poolsize = 32
-db.url = jdbc:mysql://localhost:3306/bookstore
-db.autoReconnect = true
-db.characterEncoding = UTF-8
-db.useUnicode = true
-db.useSSL = true
 db.useJDBCCompliantTimezoneShift = true
 db.useLegacyDatetimeCode = false
-db.serverTimezone = UTC
 db.serverSslCert = classpath:server.crt
+db.poolsize = 32
+
